Fix mobile responsive bug.  Form should not overflow container.

--- a/index.css
+++ b/index.css
@@ -170,9 +170,12 @@ a:hover {
   .jumbotron {
     margin-left: 2%;
     margin-right: 2%;
+    max-height: fit-content;
+    padding-top: 10px;
+    margin-bottom: 0%;
   }
   .container {
-    height: 70%;
+    max-height: 70%;
     width: 100%;
   }
 }
@@ -183,12 +186,15 @@ a:hover {
 */
 
 @media (min-width: 320px) and (max-width: 480px) {
-  .jumbotron {
-    margin-left: 0%;
-    margin-right: 0%;
-  }
-  .container {
-    height: 70%;
+  .body {
+    position: fixed;
+    max-height: 100%;
     width: 100%;
+  }
+  .tweet {
+    margin-top: 5px;
+    background-color: aliceblue;
+    padding-left: 5%;
+    border-radius: 5px;
   }
 }
